# ESP32_RTOS_BB_DEV

./: CMakeLists.txt  build.sh  platformio.ini  sdkconfig  sdkconfig.old
core/: Base.cpp  Base.hpp  CMakeLists.txt  Wifi.cpp  Wifi.hpp  _core.cpp  _core.hpp  core.cpp
core/hal/wifi/: wifi.c  wifi.h
inf/: CMakeLists.txt  inf_message.h  interface.cpp  interface.hpp
src/: CMakeLists.txt  main.cpp
