##
 # @file CMakeLists.txt
 #
 # @brief CMake file for inf directory
 #
 # @author Kishwar Kumar
 # Contact: kumar.kishwar@gmail.com
 # 
 # @date 13/03/2022
 #
 ##

 cmake_minimum_required(VERSION 3.16.0)

 file(GLOB_RECURSE SOURCE_FILES *.cpp)

 set(INCLUDES "${CMAKE_SOURCE_DIR}/inf"
              "${CMAKE_SOURCE_DIR}/core")

 idf_component_register(SRCS ${SOURCE_FILES}
                        INCLUDE_DIRS ${INCLUDES})